Fixed z-index issue with post content overlapping popup

--- a/frontend/src/components/postBanner/postBanner.scss
+++ b/frontend/src/components/postBanner/postBanner.scss
@@ -11,12 +11,14 @@
 	flex-direction: column;
 	justify-content: flex-end;
 	align-items: flex-end;
+	z-index: 2;
 
 	&ThumbnailEdit {
 		display: flex;
 		width: 100%;
 		height: 100%;
 		z-index: 1;
+		position: relative;
 
 		input {
 			height: inherit;
@@ -80,23 +82,16 @@
 	bottom: 0;
 	background-size: cover;
 	background-position: center;
-	opacity: 0.5;
+	opacity: .8;
 	background-color: white;
 	transition: .2s ease-in-out all;
-}
-
-input {
-	// TODO remove
-	z-index: 2;
 }
 
 .innerWrapper {
 	z-index: 1;
 	background: rgba(0,0,0,0.5);
 	width: 100%;
-	bottom: 0;
 	transition: 0.5s;
-	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -180,7 +175,7 @@ input {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	justify-content: center;
-	
+
 	@include text-shadow;
 	@include mobile-xs {
 		display: flex;
